fixed unwanted horizontal scrollbar

--- a/css/content.css
+++ b/css/content.css
@@ -7,9 +7,9 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    overflow: auto;
 
     font-family: Arial, Helvetica, sans-serif;
+    overflow: auto;
 
     background-color: hsl(0, 0%, 12%);
     color: hsl(0, 0%, 52%);
@@ -54,7 +54,7 @@
 }
 
 #general, #education, #skills{
-    margin: 0 0 2rem 20rem;
+    margin: 0 0 2rem 15%;
     scroll-margin-top: 2rem;
 
     display: flex;
@@ -82,7 +82,7 @@
 .tab {
     top: 0; 
 
-    margin: 0 20rem 0 20rem;
+    margin: 0 15% 0 15%;
     padding: 1rem;
     
     display: flex;
@@ -99,10 +99,12 @@
 
     margin-bottom: 0.5rem;  
     
-    color: hsl(204, 98%, 82%);
-    
     display: flex;
     justify-content: flex-end;
+
+    white-space: nowrap;
+    
+    color: hsl(204, 98%, 82%);
 }
 
 .text {
